* fixed Bug #19, valid ip is now checked alongside   active workshift * now rendering cool flash notices if login fails   because of ip or workshift (also means we're   now logging out without killing the session which   should be ok) * added transition from standby to inactive.   workshifts in standby (user logged out) can now be   deactivated (wasn't possible before) * fixed functional tests to simulate correct IP

--- a/public/stylesheets/cccash.css
+++ b/public/stylesheets/cccash.css
@@ -393,6 +393,10 @@ div.bluff-tooltip {
   background-color: #c22;
 }
 
+.state_standby {
+  background-color: #c22;
+}
+
 .state_active {
   background-color: #2d2;
 }
